--- a/src/pages/wishlist/wishlist.html
+++ b/src/pages/wishlist/wishlist.html
@@ -43,4 +43,11 @@
     
   </ion-list>
 
+  <ion-list *ngIf="wishlist==''">
+    <ion-item>
+        <div item-start> No product is in your wishlist</div>
+        
+    </ion-item>
+ </ion-list>
+
 </ion-content>
