--- a/src/pages/signupone/signupone.html
+++ b/src/pages/signupone/signupone.html
@@ -143,7 +143,7 @@
 				</ion-row>
 
 
-		<ion-item *ngIf="radio==true">
+		<!-- <ion-item *ngIf="radio==true">
 				<ion-label floating>Bank Account Number</ion-label>
 				<ion-input type="text" formControlName="bank_acc_no"></ion-input>
 				</ion-item>
@@ -152,7 +152,7 @@
 				<ion-item *ngIf="radio==true">
 					<ion-label floating>Bank Routing Number</ion-label>
 					<ion-input type="text" formControlName="bank_rout_no"></ion-input>
-					</ion-item>
+					</ion-item> -->
 
 
 		<ion-item *ngIf="radio==true">
