--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,17 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
 
+
+
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
+  
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBLfLpE3AURkapxqvczTgwCcXO6DappxjU&libraries=places"></script>
+  
 
   <!-- un-comment this code to enable service worker
   <script>
