--- a/src/pages/order-detail/order-detail.html
+++ b/src/pages/order-detail/order-detail.html
@@ -89,7 +89,7 @@
             <p class="text-p" *ngIf="item.order_status == 'S'">Shipped</p>
             <p class="text-p" style="color:green" *ngIf="item.order_status == 'A'">Accepted</p>
             <p class="text-p" style="color:red"  *ngIf="item.order_status == 'R'">Rejected By marchent</p>
-            <p class="text-p" style="color:red" *ngIf="item.order_status == 'C'">Cancelled By Buyer</p>
+            <p class="text-p" style="color:red" *ngIf="item.order_status == 'C'">Cancelled</p>
           </ion-col>
       </ion-row>
 
