--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -21,7 +21,7 @@
     <ion-list>
  
       <ion-item>
-		<ion-input type="text" formControlName="email"></ion-input>
+		<ion-input type="text" formControlName="email" placeholder="Enter your email address"></ion-input>
 	</ion-item>
      
 <div padding class="p-b-5">
