--- a/src/pages/order-list/order-list.html
+++ b/src/pages/order-list/order-list.html
@@ -18,9 +18,9 @@
     </ion-title>
 
     <ion-buttons end>
-      <button ion-button icon-only>
+      <!-- <button ion-button icon-only>
         <ion-icon name="search"></ion-icon>
-      </button>
+      </button> -->
       <button ion-button icon-only (click)="goToCartPage()">
         <ion-icon name="cart" ></ion-icon>
       </button>
