--- a/src/pages/final-checkout/final-checkout.html
+++ b/src/pages/final-checkout/final-checkout.html
@@ -59,8 +59,11 @@
         
           <ion-item >
 
-            <ion-thumbnail item-start>
-              <img src="assets/imgs/cart-pic-a.png" alt="">
+            <ion-thumbnail item-start *ngIf="item.image!=undefined">
+              <img src="{{item.image}}" alt="">
+            </ion-thumbnail>
+            <ion-thumbnail item-start *ngIf="item.image==undefined">
+              <img src="assets/imgs/noimage.png" alt="">
             </ion-thumbnail>
             <h2>{{item.name}}</h2>
             <p>Black Label 12 year...</p>
