--- a/src/pages/add-product/add-product.html
+++ b/src/pages/add-product/add-product.html
@@ -86,10 +86,10 @@
                     <ion-input formControlName="discount"></ion-input>
                 </ion-item>
             
-                <ion-item>
+                <!-- <ion-item>
                   <ion-label floating>Availability</ion-label>
                   <ion-input formControlName="available"></ion-input>
-              </ion-item>
+              </ion-item> -->
 
 
               <ion-item>
