--- a/src/pages/search-result/search-result.html
+++ b/src/pages/search-result/search-result.html
@@ -34,7 +34,8 @@
       <ion-row >
           <ion-col col-4  *ngFor="let item of searchArray" (click)="gopage(item.id)" >
             <ion-card class="list">
-              <img src="{{imageLink+item.productsimages[0].name}}" alt="">
+              <img *ngIf="item.productsimages!=''" src="{{imageLink+item.productsimages[0].name}}" alt="">
+              <img *ngIf="item.productsimages==''"  src="assets/imgs/noimage.png" alt="">
               <div class="card-title">{{item.product_name}}</div>
               <div class="card-subtitle">{{item.description}}</div>
             </ion-card>
