--- a/src/pages/list-product/list-product.html
+++ b/src/pages/list-product/list-product.html
@@ -38,7 +38,7 @@
           <h2>{{item.product_name}}</h2>
           <p>{{item.description}}</p>
           <p>{{item.quantity}}</p>
-          <div class="price"> ${{item.price}}.00 </div>
+          <div class="price"> ${{item.price}} </div>
           
            <div item-end text-right>
               <a (click)="editList(item.id)"><ion-icon class="edit-icon" name="create"></ion-icon></a>
