--- a/src/pages/signupone/signupone.html
+++ b/src/pages/signupone/signupone.html
@@ -151,10 +151,10 @@
 					</ion-item> -->
 
 
-		<ion-item *ngIf="radio==true">
+		<!-- <ion-item *ngIf="radio==true">
 			<ion-label floating>Paypal Account</ion-label>
 				<ion-input type="text" formControlName="paypal_email"></ion-input>
-				</ion-item>			
+				</ion-item>			 -->
 
 
 		<ion-item *ngIf="radio==true">
