--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -36,9 +36,15 @@
   <ion-item text-center style="box-shadow: 0px 1px 10px 0px #8a8b8b; padding-bottom: 32px;" >
       <div class="po-rel" padding>
         <a (click)="editSellerimage()"><ion-icon class="edit" name="create"></ion-icon></a>
-          <div class="pro-pic-area">
-            <img src="assets/imgs/avtar.png" alt="">
+          <div class="pro-pic-area" *ngIf="pathForImage(lastImage)==undefined">
+            <img src="assets/imgs/noimage.png" alt="">
           </div>
+
+          <div class="pro-pic-area" *ngIf="pathForImage(lastImage)">
+              <ion-thumbnail>
+              <img src="{{pathForImage(lastImage)}}"/>
+             </ion-thumbnail>
+            </div>
       </div>
       
       <h3 class="person-name"> {{userName}} </h3>
