--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -111,6 +111,7 @@
                     <img  *ngIf="item.productsimages!=''" src="{{imageLink+item.productsimages[0].name}}" alt="">
                      <img *ngIf="item.productsimages==''" src="assets/imgs/noimage.png" alt="">
                     <div class="card-title">{{item.product_name}}</div>
+                    <div class="card-title">${{item.price}}</div>
                     <div class="card-subtitle">{{item.description}}</div>
                   </ion-card>
 
