--- a/src/pages/buyer-profile/buyer-profile.html
+++ b/src/pages/buyer-profile/buyer-profile.html
@@ -36,8 +36,8 @@
   <ion-item text-center style="box-shadow: 0px 1px 10px 0px #8a8b8b; padding-bottom: 32px;" >
       <div class="po-rel" padding>
         <a (click)="editProfilePic()"><ion-icon class="edit" name="create"></ion-icon></a>
-          <div class="pro-pic-area" *ngIf="pathForImage(lastImage)==undefined">
-            <img src="assets/imgs/noimage.png" alt="">
+          <div class="pro-pic-area" *ngIf="!pathForImage(lastImage)">
+            <img src="{{userImg}}" alt="">
           </div>
 
           <div class="pro-pic-area" *ngIf="pathForImage(lastImage)">
