--- a/src/pages/signupone/signupone.html
+++ b/src/pages/signupone/signupone.html
@@ -21,7 +21,7 @@
 		<ion-list>
 			<h4>Tell us about yourself</h4>
 			<ion-item>
-				<ion-label floating>Name</ion-label>
+				<ion-label floating>Name <b style="color:red;">*</b></ion-label>
 				<ion-input type="text" formControlName="name"></ion-input>
 			</ion-item>
 
