--- a/src/pages/signup-five/signup-five.html
+++ b/src/pages/signup-five/signup-five.html
@@ -24,7 +24,7 @@
     		<h4>Verify Email Address</h4>
           <ion-item>
             <ion-label text-uppercase floating>otp</ion-label>
-            <ion-input type="number" [(ngModel)]="data" maxlength="6"></ion-input>
+            <ion-input type="tel" [(ngModel)]="data" maxlength="6"></ion-input>
           </ion-item>
           <ion-item text-center class="no-brdr-btm" style="margin-top:1rem;" >
             <p>You will receive an OTP code via email momentarily. </p>
