--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -36,7 +36,7 @@
   <ion-item text-center style="box-shadow: 0px 1px 10px 0px #8a8b8b; padding-bottom: 32px;" >
       <div class="po-rel" padding>
         <a (click)="editSellerimage()"><ion-icon class="edit" name="create"></ion-icon></a>
-          <div class="pro-pic-area" *ngIf="!bfrLogin">
+          <div class="pro-pic-area" *ngIf="bfrLogin==''">
             <img src="assets/imgs/noimage.png" alt="">
           </div>
 
